# SimpleProxyManager

./: .gitignore  README.md  SECURITY.md  proxies.example.txt  proxyManager.test.py  pyproject.toml  requirements.txt  setup.py  testproxies.txt
.github/workflows/: code_quality.yml  publish.yml
SimpleProxyManager/: SimpleProxyManager.py
dev/: example.py
proxyManager/: proxyManager.py
scripts/: example.py
src/: proxyManager.py
src/SimpleProxyManager/: SimpleProxyManager.py  __init__.py
src/SimpleProxyManager/locales/: en.json
