[build-system]
requires = ["setuptools>=69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SimpleProxyManager"
dynamic = ["version"]
description = "Simple Python multithreaded proxy manager, focused on scrapes"
readme = "README.md"
authors = [{ name = "Alessandro G. Magnasco", email = "amagnasco@gradcenter.cuny.edu"}]
license = { file = "LICENSE.md"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
    ]
keywords = ["proxy","scraper","web","http"]
dependencies = [
    "aiohttp-requests>=0.2.4, <1",
    "urllib3>=2.2.1, <3",
    "uvloop==0.19.0, <1"
    ]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/amagnasco/SimpleProxyManager"

[tool.setuptools.dynamic]
version = {attr = "SimpleProxyManager.__version__"}